rust/otap-dataflow/crates/engine-macros/tests/ui/urn_category_mismatch.rs
// A literal URN whose category segment disagrees with `category` is an error.
use otap_df_engine_macros::component_inventory;

#[component_inventory(id = "urn:otel:exporter:otlp", category = Receiver)]
pub struct Foo;

fn main() {}
